// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zos-jobs submit local-file command syntax errors should occur if an extra unknown option is specified 1`] = `
"
Syntax Error:
You specified the following unknown values: \\"blah\\".

 Could not interpret them as a group, command name, or positional option.

Syntax Error:
Missing Required Option:
--host (-H)

Option Description:
The z/OSMF server host name.

Syntax Error:
Missing Required Option:
--user (-u)

Option Description:
Mainframe (z/OSMF) user name, which can be the same as your TSO login.

Syntax Error:
Missing Required Option:
--password (--pass,--pw)

Option Description:
Mainframe (z/OSMF) password, which can be the same as your TSO password.

Example:

 - Submit the JCL in the file \\"iefbr14.txt\\":

      $ zowe zos-jobs submit local-file \\"iefbr14.txt\\"

Use \\"zowe zos-jobs submit local-file blah --help\\" to view command description, usage, and options.
"
`;

exports[`zos-jobs submit local-file command syntax errors should occur if the local file name is missing 1`] = `
"
Syntax Error:
Missing Positional Argument: localFile
Argument Description: The local file containing the JCL to submit.

Syntax Error:
Missing Required Option:
--host (-H)

Option Description:
The z/OSMF server host name.

Syntax Error:
Missing Required Option:
--user (-u)

Option Description:
Mainframe (z/OSMF) user name, which can be the same as your TSO login.

Syntax Error:
Missing Required Option:
--password (--pass,--pw)

Option Description:
Mainframe (z/OSMF) password, which can be the same as your TSO password.

Example:

 - Submit the JCL in the file \\"iefbr14.txt\\":

      $ zowe zos-jobs submit local-file \\"iefbr14.txt\\"

Use \\"zowe zos-jobs submit local-file --help\\" to view command description, usage, and options.
"
`;
